kubernetes-manifests/custom-resource-definitions/middleware.yaml
#--------------------------------------
# rewrite auth
#--------------------------------------
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: swissgeol-asset-auth-rewrite
  namespace: swissgeol-asset  
spec:
  stripPrefix:
    prefixes:
      - /auth

#--------------------------------------
# rewrite kibana
#--------------------------------------
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:  
  name: swissgeol-asset-kibana-rewrite
  namespace: swissgeol-asset
spec:
  stripPrefix:
    prefixes:
      - /kibana

#--------------------------------------
# whitelist 
#--------------------------------------
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: swissgeol-asset-whitelist
  namespace: swissgeol-asset  
spec:
  ipWhiteList:
    sourceRange:
      - 62.202.47.154
